implement all feedback

--- a/pota.tex
+++ b/pota.tex
@@ -53,18 +53,18 @@ Nearby galaxy clusters are ideal laboratories for studying the evolution of low-
 
 The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) aims to study the formation and assembly of the Fornax Cluster out to its viral radius with a variety of observations. These include
 deep photometry, multi-object and wide-field spectroscopy, supplemented by cross-match with other wavelength observations such as  X-rays (e.g. Paolillo et al. 2002).
-The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data from the VST/OmegaCam camera covering an area of $\sim30$ $deg^2$ of the cluster out the viral radius. The area also includes the Fornax-A subgroups, hence providing a full coverage of the cluster structure under assembly.  The depth of the imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band (see Iodice et al. 2016, 2017), among the deepest acquired on the cluster so far. In the galaxy cluster core, VISTA/VIRCAM observations in J and K (Ks = 23.4 $AB$ mag, and J = 23.4 $AB$ mag) are also available (see e.g. Munoz et al. 2015), to complement the optical data and optimise galaxy and globular cluster membership and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, and/or Ultra Compact Dwarf galaxies, UCDs hereafter). 
+The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data from the VST/OmegaCam camera covering an area of $\sim30$ $deg^2$ of the cluster out the viral radius. The area also includes the Fornax-A subgroups, hence providing a full coverage of the cluster structure under assembly.  The depth of the imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band (see Iodice et al. 2016, 2017), among the deepest acquired on the cluster so far (Venhola et al. 2018). VISTA/VIRCAM observations in J and K (Ks = 23.4 $AB$ mag, and J = 23.4 $AB$ mag) are also available (see e.g. Munoz et al. 2015), to complement the optical data and optimise galaxy and globular cluster membership and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, and/or Ultra Compact Dwarf galaxies, UCDs hereafter). 
 
-The multi-band deep images have been used to study the light distribution and colors of cluster galaxies out to 8-10 effective radii and beyond to characterise the faint galaxy haloes and have revealed the presence of ultra-faint stellar structures in the core of Fornax: fingerprints of past and ongoing interaction between galaxies falling into the deep potential well of the cluster (Iodice et al. 2016). The same conclusion is backed-up by the complex distribution of globular clusters in the Fornax cluster, studied by D’Abrusco et al. (2016) using the same data (Cantiello et al. 2017).
+The multi-band deep images have been used to study the light distribution and colors of cluster galaxies out to 8-10 effective radii and beyond to characterise the faint galaxy haloes and have revealed the presence of ultra-faint stellar structures in the core of Fornax: fingerprints of past and ongoing interaction between galaxies falling into the deep potential well of the cluster (Iodice et al. 2016, Venhola et al. 2017). The same conclusion is backed-up by the complex distribution of globular clusters in the Fornax cluster, studied by D’Abrusco et al. (2016) using the same data (Cantiello et al. 2017).
 
-The Fornax cluster is the most massive galaxy structure after the Virgo cluster within 20 Mpc and it is an ideal target to study the effect of the environment on the structure and assembly of galaxies of any type, from the massive central giant early-type systems to the dwarf galaxies. Despite its regular appearance, it has been found that the assembly of the Fornax cluster is still ongoing. Although its core seems in an evolved phase (Grillmair et al. 1994; Jord an et al. 2007) and most of the bright ($m_B < $  15 mag) cluster members are early-type galaxies (Ferguson 1989), the presence of tidal streams (e.g. Iodice et al. 2016, D’Abrusco et al. 2016) have revealed that there are still signs of active galaxy interactions in the region inside 200 kpc, which mirrors the large scale activity, including the accretion of the Fornax-A (NGC 1316) subgroup into the cluster core along a cosmic web filament (Drinkwater et al. 2001; Scharf et al. 2005).
+The Fornax cluster is the most massive galaxy structure after the Virgo cluster within 20 Mpc and it is an ideal target to study the effect of the environment on the structure and assembly of galaxies of any type, from the massive central giant early-type systems to the dwarf galaxies. Despite its regular appearance, it has been found that the assembly of the Fornax cluster is still ongoing. Although its core seems in an evolved phase (Grillmair et al. 1994; Jord an et al. 2007) and most of the bright ($m_B < $  15 mag) cluster members are early-type galaxies (Ferguson 1989), the presence of tidal streams (e.g. Iodice et al. 2016, D’Abrusco et al. 2016, Eisenhardt et al. 2017) have revealed that there are still signs of active galaxy interactions in the region inside 200 kpc, which mirrors the large scale activity, including the accretion of the Fornax-A (NGC 1316) subgroup into the cluster core along a cosmic web filament (Drinkwater et al. 2001; Scharf et al. 2005).
 
 To kinematically map the complexity of the cluster core out to at least 200 kpc using discrete kinematical tracers (e.g. GCs and UCDs) and finally connect the large scale kinematics down to the scale of the dwarf galaxies, we have started a number of spectroscopic follow-ups, which include integral field spectroscopy of dwarf galaxies with MUSE (see Mentz et al. 2016), and the multi-object spectroscopy  of GC and UCDs candidates with VIMOS/VLT.
 
 The radial velocity catalogue of GCs in Fornax presented in this paper is complementary to archival spectroscopic GC datasets of the Fornax cluster: Schuberth et al. (2010a) (which incorporates the catalogue of Dirsch et al.
 2004), Bergond et al. (2007) and other catalogues discussed throughout the text. 
 %There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an extension of the stellar kinematics out to several effective radii and overlapping with the area covered by our analysis, which we will use to compare the average properties of the velocity field of the galaxy core.
-Assumed distance is 19.95 Mpc (Tonry et al. 2010).  The ongoing FDS survey is a joint project based on o Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) and VEGAS (P.I. E. Iodice, Capaccioli et al. 2015).
+Assumed distance is 19.95 Mpc (Tonry et al. 2010).  The ongoing FDS survey is a joint project based on Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) and VEGAS (P.I. E. Iodice, Capaccioli et al. 2015).
 
 The paper is structured as follows: Section \ref{sec:data} describes the data acquisition and reduction. The redshift estimation is discussed in Section \ref{sec:zest}, results are presented in Section \ref{sec:analysis} and discussed in \ref{sec:discussion}. We summarise the results of the paper and conclude in Section \ref{sec:conclusions}. 
 
@@ -179,11 +179,11 @@ For each mask, the REFLEX pipeline outputs multi-extension fits files which incl
 \section{Redshift estimation}
 \label{sec:zest}
 
-Our goal is to estimate the Doppler shift of the observed spectra in the Fornax cluster. A total of 6700 spectra were extracted by the REFLEX pipeline. This number includes the genuine physical objects associated with the Fornax cluster (i.e., GCs, UDCs or dwarf galaxies), as well as Galactic stars, background galaxies and spectra with signal-to-noise (S$/$N) too low to be classified with certainty. 
+A total of 6700 spectra were extracted by the REFLEX pipeline. This number includes the genuine physical objects associated with the Fornax cluster (i.e., GCs, UDCs or dwarf galaxies), as well as Galactic stars, background galaxies and spectra with signal-to-noise (S$/$N) too low to be classified with certainty. 
 
 Radial velocities were computed with iraf/fxcor, which performs cross-correlation between the Fourier-transformed scientific spectrum and a Fourier-transformed set of template spectra \citep{Tonry79}. Fxcor was preferred to full spectra fitting approaches (e.g. pPXF, \citealt{Cappellari04}) because the former does not require initial guesses on the radial velocity and it is more CPU efficient. 
 
-The Indo-U.S. Library of Coud\'e Feed Stellar Spectra \citep{Valdes04} was used as library of template spectra. The library contains 1273 stellar spectra, observed with a dispersion of $0.44$ \AA /pix and a resolution of $\sim 1$ \AA . The spectra cover the 3460 -- 9464 \AA\ range, which overlaps nicely with the wavelength range of our VIMOS spectra. From the whole library, we selected a random subset of 40 stars with spectral types from \textit{F} to \textit{M} because this is the range expected for metal-poor to metal-rich GCs. The 40 stellar spectra were convoluted with a Gaussian filter of standard deviation $\sigma = 12.0\mbox{\AA\ } / 2.355$, where 12.0 \AA\ is the FWHM resolution of our VIMOS spectra. 
+The Indo-U.S. Library of Coud\'e Feed Stellar Spectra \citep{Valdes04} was used as library of template spectra. The library contains 1273 stellar spectra, observed with a dispersion of $0.44$ \AA /pix and a resolution of $\sim 1$ \AA . The spectra cover the 3460 -- 9464 \AA\ range, which overlaps nicely with the wavelength range of our VIMOS spectra. From the whole library, we selected a random subset of 40 stars with spectral types from \textit{F} to \textit{M} because this is the range expected for metal-poor to metal-rich GCs. The 40 stellar spectra were convolved with a Gaussian filter of standard deviation $\sigma = 12.0\mbox{\AA\ } / 2.355$, where 12.0 \AA\ is the FWHM resolution of our VIMOS spectra. 
 
 The scientific spectra were prepared as follows. First, we computed the median signal-to-noise per pixel $S/N$, where the signal $S$ is measured in the range 5000-6600 \AA\ and the noise $N$ is the noise returned by the REFLEX pipeline in the same wavelength range. Second, telluric bands in the range 6850 -- 7688 \AA\ and some troublesome skylines were replaced with the fit to the spectral continuum. The continuum was computed with iraf/continuum by averaging ten contiguous pixels and interpolating the result with a cubic spline coupled with a $3\sigma$ rejection algorithm.  
 
@@ -210,7 +210,7 @@ The scatter in radial velocity due to normal template mismatch (i.e. due to intr
 \label{fig:spectra}
 \end{figure}
 
-We used the \citet{Tonry79} R factor (TDR hereafter) to asses the goodness of the correlation between scientific spectra and template spectra. As expected, TDR is inversely proportional to the velocity uncertainties. This effect is shown in Figure \ref{fig:tdr}, where TDR is shown as a function of the measured radial velocity $v$ and velocity uncertainty $\delta v$. 
+We used the \citet{Tonry79} R factor (TDR hereafter) to assess the goodness of the correlation between scientific spectra and template spectra. As expected, TDR is inversely proportional to the velocity uncertainties. This effect is shown in Figure \ref{fig:tdr}, where TDR is shown as a function of the measured radial velocity $v$ and velocity uncertainty $\delta v$. 
 It is worth noting that fxcor was set to measure the Doppler shift of the CaT lines only for objects with radial velocities $-500 < v < 3000 \kms$. This means that only radial velocities measured to be $-450 < v < 2500 \kms$ are meaningful, and velocities outside this range are by chance correlations, and thus meaningless. Heliocentric correction was applied to all radial velocities. 
 
 \subsection{Disentangling Fornax objects from foreground and background contamination}
@@ -250,7 +250,7 @@ The stellar systems surrounding NGC~1399 has been in the focus of many spectrosc
 To find which of our VIMOS objects have a literature counterpart, we matched our catalogue of 387 Fornax objects with the NED (Nasa/Ipac Extragalactic Database) database using the python/astropy tools. 
 We manually added the catalogue of \citet{Schuberth} to the literature database, because all 693 GCs from \citet{Schuberth} are not in NED. We required the literature objects to have a measured radial velocity and to be within 0.4 arcsec from our VIMOS source. 
 
-In most cases, the literature counterpart has been observed from more than one author. Table \ref{tab:authors} reports the number of objects per author for which we have a VIMOS radial velocity. 
+In most cases, the literature counterpart has been observed by more than one author. Table \ref{tab:authors} reports the number of objects per author for which we have a VIMOS radial velocity. 
 In order to compare literature velocities with our VIMOS velocities, we averaged together the radial velocities of unique objects observed in multiple literature studies. Uncertainties were summed in quadrature. Overall, we found 48 of our Fornax objects to have a literature counterpart. 
 
 Figure \ref{fig:vel_comparison} shows the comparison between the our VIMOS objects and the unique literature objects obtained as explained above. Also in this case the agreement is satisfactory and no bias is detected. 
@@ -339,7 +339,7 @@ GC systems which are bond to other giant galaxies can be seen clustered around t
 
 Figure \ref{fig:cc} displays the distribution of GCs/UCDs in the photometric space. These are compared with the distribution of all sources targeted for spectroscopic follow-up, including Galactic stars and background galaxies. Although the $u$ filter is known to well discriminate GCs from contaminants, here we only consider $g$, $r$, $i$ magnitudes because all but one GCs/UCDs have a genuine measurement in these photometric bands, whereas only 50\% of our GCs/UCDs have a $u$-band measurement. This is due to $u$-band imaging being too shallow for detecting faint GCs \citep{DAbrusco16}.
 
-GCs/UCDs and contaminants are not well separated using merely $g$, $r$, $i$ filters, but velocity information clearly separates GCs/UCDs from Galactic stars and background galaxies. This is also shown in Figure \ref{fig:cc}. The left-bottom panel, with $(g-i)$ vs .$v$, shows how the velocity dispersion of blue GCs with $(g-i) \le 1$ is higher with respect to that of the red GCs, a property shared with GC systems in the most giant galaxies. The rightmost panel, with $v$ vs $i$, shows that the velocity distribution of all GCs is skewed towards lower velocities (a property also visible in Figure \ref{fig:phase-space}). The convincing separation between GCs and stars also ensures that this property is unlikely due miss-classified GCs. 
+GCs/UCDs and contaminants are not well separated using merely $g$, $r$, $i$ filters, but velocity information clearly separates GCs/UCDs from Galactic stars and background galaxies. This is also shown in Figure \ref{fig:cc}. The left-bottom panel, with $(g-i)$ vs .$v$, shows how the velocity dispersion of blue GCs with $(g-i) \le 1$ is higher than that of the red GCs, a property shared with GC systems in the most giant galaxies. The rightmost panel, with $v$ vs $i$, shows that the velocity distribution of all GCs is skewed towards lower velocities (a property also visible in Figure \ref{fig:phase-space}). The convincing separation between GCs and stars also ensures that this property is unlikely due miss-classified to GCs. 
 
 \subsection{Root-mean-square velocity profile}
 The root-mean-square velocity $v_{\rm rms}$ quantifies the total kinetic energy of a stellar system. It accounts both for the ordered and for the random stellar motions. Here we compute the root-mean-square velocity as:
@@ -360,11 +360,11 @@ The $v_{\rm rms}$ was calculated on a total of 1133 stellar objects. This catalo
 
 Figure \ref{fig:vrms} displays the $v_{\rm rms}$ profile for: i) our combined master catalogue of 1133 GCs and UCDs; ii) the GC catalogue of \citep{Schuberth},  iii) the central stars of galaxies surrounding NGC~1399; iv) all Fornax galaxies from \citet{Drinkwater00}. 
 
-The master catalogue contains GCs and UCDs predominantly from NGC 1399, which is the largest and more massive system in the field dominating the total potential in the core of the cluster. Here, objects from other galaxies, embedded in the extended exponential halo around the galaxy (Iodice et al. 2016), in particular NGC 1404, NGC 1387, are likely to contaminate the kinematics of the central galaxies. However, looking at the $v_{\rm rms}$ profile of the total sample (shaded gray area) there is a steep raise of the profile around $R\sim10$ arcmin which marks a kinematical transition from a ``colder'' kinematical region to a ``warmer'' one. In the outermost region, the $v_{\rm rms}$ profile flattens out to a value which is fairly consistent with the kinematics of the cluster galaxies (the green data point at $R\sim35’$ from \citealt{Drinkwater00}). This suggests that the GC kinematics at radii larger than 10 arcmin is ruled by the cluster potential. This feature, kinematically demonstrates that the transition radius between the bright central galaxy and the outer exponential halo at $R\sim10$ arcmin from \citet{Iodice16} represents the radius where we observe the emergence of an intracluster population of GCs. A similar conclusion is found from the new observations of PNe from Spiniello et al. (2018), hence all evidences converging, for the first time, on a clear photometrical and kinematical evidence of the intracluster light in the Fornax Cluster.
+The master catalogue contains GCs and UCDs predominantly from NGC 1399, which is the largest and more massive system in the field dominating the total potential in the core of the cluster. Here, objects from other galaxies, embedded in the extended exponential halo around the galaxy (Iodice et al. 2016), in particular NGC 1404, NGC 1387, are likely to contaminate the kinematics of the central galaxies. However, looking at the $v_{\rm rms}$ profile of the total sample (shaded gray area) there is a steep rise of the profile around $R\sim10$ arcmin which marks a kinematical transition from a ``colder'' kinematical region to a ``warmer'' one. In the outermost region, the $v_{\rm rms}$ profile flattens out to a value which is fairly consistent with the kinematics of the cluster galaxies (the green data point at $R\sim35’$ from \citealt{Drinkwater00}). This suggests that the GC kinematics at radii larger than 10 arcmin is ruled by the cluster potential. This feature, kinematically demonstrates that the transition radius between the bright central galaxy and the outer exponential halo at $R\sim10$ arcmin from \citet{Iodice16} represents the radius where we observe the emergence of an intracluster population of GCs. A similar conclusion is found from the new observations of PNe from Spiniello et al. (2018), hence all evidences converging, for the first time, on a clear photometrical and kinematical evidence of the intracluster light in the Fornax Cluster.
 
 When split in the red and blue subpopulations the GC sample shows some systematic differences. At all radii the $v_{\rm rms}$ profile of the red GCs is systematically smaller than the one of the blue GCs.  In the innermost regions at $R < 10$ arcmin they are consistent with the results from Schuberth et al. (2010a). In particular the blue GCs turned out to be the more extended population in radius, nicely matching the value of the cluster galaxy datapoint. The difference in normalisation between the two populations is mainly deriving from the different slopes of the two populations density profiles as measured, e.g., by Schuberth et al. (2010a, their Eq. 10 and 11 and Table 5). However, the difference of the measured slopes are so small that using Eq. 2 to 4 in Napolitano et al. (2014) to determine the expected change in the normalisation of the two profiles, we have found that for a $\sigma \sim 300$ km s $^{-1}$ of the RGC value the estimated BGC value of $v_{\rm rms}$ is $\sim 308$ km s $^{-1}$, i.e. consistent with what measured for the Blue GC datapoint.
 
-Finally, we report in the same Figure the central velocity dispersion values of the galaxies populating the same area occupied by the total GC catalog. The central value of NGC 1399 is consistent with the typical central raise of the velocity dispersion in the center of massive galaxies where is the potential on the galaxy which dominates. At larger distances one might expect that galaxy might contaminate to the overall GC kinematics. Especially in the outer regions, i.e. $R>10$ arcmin, assuming these regions dominated by the cluster potential, the presence of GCs bound to the galaxies might alter the true  intracluster population. A detailed separation of the bound GC population from the true unbound (from any galaxy in the core) GCs will be addressed in a forthcoming paper. Here we just remark that the impact of the bound GC population has to be limited because, roughly speaking, it should dilute the true dispersion by a quantity that it is roughly the difference in quadrature of the true dispersion and the one of the bound sample (i.e. assuming the central velocity dispersion of the galaxy). If so, then the dilution can be as large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ profile in the radius range $15<R<28$ arcmin in correspondence of the bins overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar correction for NGC~1404 would increase the intrinsic $v_{\rm rms}$ to $\sim400$ km s $^{-1}$.
+Finally, we report in the same Figure the central velocity dispersion values of the galaxies populating the same area occupied by the total GC catalog. The central value of NGC 1399 is consistent with the typical central rise of the velocity dispersion in the center of massive galaxies where is the potential on the galaxy which dominates. At larger distances one might expect that galaxy might contaminate to the overall GC kinematics. Especially in the outer regions, i.e. $R>10$ arcmin, assuming these regions dominated by the cluster potential, the presence of GCs bound to the galaxies might alter the true  intracluster population. A detailed separation of the bound GC population from the true unbound (from any galaxy in the core) GCs will be addressed in a forthcoming paper. Here we just remark that the impact of the bound GC population has to be limited because, roughly speaking, it should dilute the true dispersion by a quantity that it is roughly the difference in quadrature of the true dispersion and the one of the bound sample (i.e. assuming the central velocity dispersion of the galaxy). If so, then the dilution can be as large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ profile in the radius range $15<R<28$ arcmin corresponding to the bins overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar correction for NGC~1404 would increase the intrinsic $v_{\rm rms}$ to $\sim400$ km s $^{-1}$.
 
 In conclusion of this section, we can summarise the main finding of this paper in Figure 9, by saying that the unprecedented extension of the GC kinematics, combined with the literature data, has demonstrated the kinematical signature of a population of intracluster GCs, made of both Red GCs and Blue GCs. The two populations show $v_{\rm rms}$ profiles consistent with the dynamics of a common cluster potential and also consistent with the velocity dispersion of the innermost cluster galaxies in the Fornax cluster. 
 
@@ -378,7 +378,7 @@ Our results are based on observations with VST/OmegaCam for imaging and 25 VST/V
 
 After a visual inspection of candidate spectra, we compiled a consensus catalogue of 372 GCs, 15 UCDs (objects with $i \le 20.3$ mag) and 464 Galactic stars. Most GCs belong to the dominant galaxy NGC~1399, but we estimated that 30-40 objects might belong to NGC~1404, NGC~1380, and to other major galaxies in the observed field.
 
-We have used the new complete catalog of GCs to derive the total  $v_{\rm rms}$ of the GC sample and also broken the sample in the Red and Blue subsamples. We have demonstrated that all profiles show a similar signature at around $R\sim10’$ of a kinematical transition from a low $v_{\rm rms}$ regime to a higher one, with the former being consistent with the central velocity dispersion of NGC 1399 (che central cluster galaxy) and the latter being consistent with the velocity dispersion of the cluster galaxies. This demonstrates that at $R>10’$ the GC populations both feel strongly the cluster potential, rather than the fable galaxy potential. These kinematical evidences corroborate the photometrical evidences found in the deep galaxy photometry of a transition radius between the bright central galaxy and the outer exponential halo at $R\sim10$ arcmin from Iodice et al. (2016) and show, from the dynamical point of view,  the emergence of an intracluster population of GCs in the Fornax Cluster.
+We have used the new complete catalog of GCs to derive the total  $v_{\rm rms}$ of the GC sample and also broken the sample in the Red and Blue subsamples. We have demonstrated that all profiles show a similar signature at around $R\sim10’$ of a kinematical transition from a low $v_{\rm rms}$ regime to a higher one, with the former being consistent with the central velocity dispersion of NGC 1399 (the central cluster galaxy) and the latter being consistent with the velocity dispersion of the cluster galaxies. This demonstrates that at $R>10’$ the GC populations both feel strongly the cluster potential, rather than the fable galaxy potential. These kinematical evidences corroborate the photometrical evidences found in the deep galaxy photometry of a transition radius between the bright central galaxy and the outer exponential halo at $R\sim10$ arcmin from Iodice et al. (2016) and show, from the dynamical point of view,  the emergence of an intracluster population of GCs in the Fornax Cluster.
 
 
 \bibliographystyle{mn2e}
