--- a/pota.tex
+++ b/pota.tex
@@ -39,7 +39,7 @@ $^1$ INAF -- Osservatorio Astronomico di Capodimonte, Salita Moiariello, 16, 801
 
 \maketitle
 \begin{abstract}
-We present the results of a large spectroscopic survey of extragalactic globular clusters (GCs) in the core of the Fornax cluster, as part of the Fornax Deep Survey. GC candidates were selected in multi-band VST and VISTA images. About 4500 low resolution spectra (from 4800 to 10000\AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ around the dominant galaxy NGC~1399. We describe the methodology used for data reduction and data analysis. We found a total of 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) associated to galaxies in the sampled field. Most of these objects are associated to NGC~1399, with only 10\% likely associated to other giant galaxies. This new dataset is complementary to the many GC catalogues already present in the literature and it brings the total number of trace particles around  NGC~1399 to over a thousand. This is a valuable reference for the study of cluster environments and for the dynamics and kinematics of giant galaxies. 
+We present the results of a large spectroscopic survey aimed at detecting extragalactic globular clusters (GCs) in the core of the Fornax cluster, as part of the Fornax Deep Survey. GC candidates were selected in multi-band VST and VISTA images. About 4500 low resolution spectra (from 4800 to 10000\AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ around the dominant galaxy NGC~1399. We describe the methodology used for data reduction and data analysis. We found a total of 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) associated to galaxies in the sampled field. Most of these objects are associated to NGC~1399, with only 10\% likely associated to other giant galaxies. This new dataset is complementary to the many GC catalogues already present in the literature and it brings the total number of trace particles around  NGC~1399 to over a thousand. This is a valuable reference for the study of the galaxy cluster environment and for the dynamics and kinematics of giant galaxies. 
 
 \end{abstract}
 
@@ -55,16 +55,17 @@ The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) aims to stu
 deep photometry, multi-object and wide-field spectroscopy, supplemented by cross-match with other wavelength observations such as  X-rays (e.g. Paolillo et al. 2002).
 The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data from the VST/OmegaCam camera covering an area of $\sim30$ $deg^2$ of the cluster out the viral radius. The area also includes the Fornax-A subgroups, hence providing a full coverage of the cluster structure under assembly.  The depth of the imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band (see Iodice et al. 2016, 2017), among the deepest acquired on the cluster so far (Venhola et al. 2018). VISTA/VIRCAM observations in J and K (Ks = 23.4 $AB$ mag, and J = 23.4 $AB$ mag) are also available (see e.g. Munoz et al. 2015), to complement the optical data and optimise galaxy and globular cluster membership and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, and/or Ultra Compact Dwarf galaxies, UCDs hereafter). 
 
-The multi-band deep images have been used to study the light distribution and colors of cluster galaxies out to 8-10 effective radii and beyond to characterise the faint galaxy haloes and have revealed the presence of ultra-faint stellar structures in the core of Fornax: fingerprints of past and ongoing interaction between galaxies falling into the deep potential well of the cluster (Iodice et al. 2016, Venhola et al. 2017). The same conclusion is backed-up by the complex distribution of globular clusters in the Fornax cluster, studied by D’Abrusco et al. (2016) using the same data (Cantiello et al. 2017).
+The multi-band deep images have been used to study the light distribution and colors of cluster galaxies out to 8-10 effective radii and beyond to characterise the faint galaxy haloes and have revealed the presence of ultra-faint stellar structures in the core of Fornax: fingerprints of past and ongoing interaction between galaxies falling into the deep potential well of the cluster (Iodice et al. 2016, Venhola et al. 2017). The same conclusion is backed-up by the complex distribution of globular clusters in the Fornax cluster (D’Abrusco et al. 2016, Cantiello et al. 2017).
 
-The Fornax cluster is the most massive galaxy structure after the Virgo cluster within 20 Mpc and it is an ideal target to study the effect of the environment on the structure and assembly of galaxies of any type, from the massive central giant early-type systems to the dwarf galaxies. Despite its regular appearance, it has been found that the assembly of the Fornax cluster is still ongoing. Although its core seems in an evolved phase (Grillmair et al. 1994; Jord an et al. 2007) and most of the bright ($m_B < $  15 mag) cluster members are early-type galaxies (Ferguson 1989), the presence of tidal streams (e.g. Iodice et al. 2016, D’Abrusco et al. 2016, Eisenhardt et al. 2017) have revealed that there are still signs of active galaxy interactions in the region inside 200 kpc, which mirrors the large scale activity, including the accretion of the Fornax-A (NGC 1316) subgroup into the cluster core along a cosmic web filament (Drinkwater et al. 2001; Scharf et al. 2005).
+The Fornax cluster is the most massive galaxy structure after the Virgo cluster within 20 Mpc and it is an ideal target to study the effect of the environment on the structure and assembly of galaxies of any type, from the massive central giant early-type systems to the dwarf galaxies. Despite its regular appearance, it has been found that the assembly of the Fornax cluster is still ongoing. Although its core seems in an evolved phase (Grillmair et al. 1994; Jord an et al. 2007) and most of the bright ($m_B < $  15 mag) cluster members are early-type galaxies (Ferguson 1989), the presence of stellar and GC tidal streams (e.g. Iodice et al. 2016, D’Abrusco et al. 2016, Eisenhardt et al. 2017) have revealed that there are still signs of active galaxy interactions in the region inside 200 kpc, which mirrors the large scale activity, including the accretion of the Fornax-A (NGC 1316) subgroup into the cluster core along a cosmic web filament (Drinkwater et al. 2001; Scharf et al. 2005).
 
 To kinematically map the complexity of the cluster core out to at least 200 kpc using discrete kinematical tracers (e.g. GCs and UCDs) and finally connect the large scale kinematics down to the scale of the dwarf galaxies, we have started a number of spectroscopic follow-ups, which include integral field spectroscopy of dwarf galaxies with MUSE (see Mentz et al. 2016), and the multi-object spectroscopy  of GC and UCDs candidates with VIMOS/VLT.
 
+The ongoing FDS survey is a joint project based on Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) and VEGAS (P.I. E. Iodice, Capaccioli et al. 2015).
 The radial velocity catalogue of GCs in Fornax presented in this paper is complementary to archival spectroscopic GC datasets of the Fornax cluster: Schuberth et al. (2010a) (which incorporates the catalogue of Dirsch et al.
 2004), Bergond et al. (2007) and other catalogues discussed throughout the text. 
 %There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an extension of the stellar kinematics out to several effective radii and overlapping with the area covered by our analysis, which we will use to compare the average properties of the velocity field of the galaxy core.
-Assumed distance is 19.95 Mpc (Tonry et al. 2010).  The ongoing FDS survey is a joint project based on Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) and VEGAS (P.I. E. Iodice, Capaccioli et al. 2015).
+The assumed distance is 19.95 Mpc (Tonry et al. 2010).  
 
 The paper is structured as follows: Section \ref{sec:data} describes the data acquisition and reduction. The redshift estimation is discussed in Section \ref{sec:zest}, results are presented in Section \ref{sec:analysis} and discussed in \ref{sec:discussion}. We summarise the results of the paper and conclude in Section \ref{sec:conclusions}. 
 
@@ -92,7 +93,7 @@ We also applied a magnitude restriction of 17.0$<i<$23.0 mag to our GC candidate
 As an additional criterion we used the published wide-field Washington photometry from \citet{Dirsch04} and \citet{Bassino} to construct a $C-i$ vs. $i-K_s$ diagram. Since the Washington $C$-band is similar to a $u$-band filter and the $uiK_s$ plane is a very powerful tool to discriminate GCs from foreground and background objects \citep{Munoz14}, the $CiK_s$ plane is the cleanest selection criterion. Unfortunately, the spatial coverage of the Washington photometry is not complete in the central square degree due to chip gaps and the restricted field-of-view. 
 Out of the 1065 unique spectroscopic targets with $CiK_s$ photometry, 809 (or $\sim$76\%) are within this selection polygon.
 
-Finally, for the very central regions around and on top of NGC~1399, the GC candidate list from ACS photometry by \citet{Puzia14} has been used to select GC candidates for the slit allocation.
+Finally, for the very central regions of NGC~1399 which are dominated by the galaxy light, we added additional GC candidates based on the more accurate photometry and morphology derived from HST/ACS photometry by \citet{Puzia14}.
 
 The FDS $gi$, the NGFS $K_s$, Washington $C$ as well as the central ACS  photometric catalogs were matched with SExtractor photometry of point and extended sources in all pre-images (ESO programme 094.B-0687(A)), which were taken in $R$-band prior to the spectroscopic observations. The x and y coordinates of sources in the pre-images are needed to create VIMOS catalogs for the creation of mask files with the VMMPS (VIMOS Mask Preparation Software,\citealt{Bottini05}) from ESO.
 
