--- a/ref3.bib
+++ b/ref3.bib
@@ -13,6 +13,45 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Paolillo02,
+   author = {{Paolillo}, M. and {Fabbiano}, G. and {Peres}, G. and {Kim}, D.-W.
+  },
+    title = "{Deep ROSAT HRI Observations of the NGC 1399/NGC 1404 Region: Morphology and Structure of the X-Ray Halo}",
+  journal = {\apj},
+   eprint = {astro-ph/0109342},
+ keywords = {Galaxies: Clusters: Individual: Name: Fornax, Galaxies: Halos, Galaxies: Jets, Radio Continuum: Galaxies, X-Rays: Galaxies, X-Rays: Individual: NGC Number: NGC 1399, X-Rays: Individual: NGC Number: NGC 1404},
+     year = 2002,
+    month = feb,
+   volume = 565,
+    pages = {883-907},
+      doi = {10.1086/337919},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...565..883P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Eigenthaler18,
+   author = {{Eigenthaler}, P. and {Puzia}, T.~H. and {Taylor}, M.~A. and 
+  {Ordenes-Brice{\~n}o}, Y. and {Mu{\~n}oz}, R.~P. and {Ribbeck}, K.~X. and 
+  {Alamo-Mart{\'{\i}}nez}, K. and {Zhang}, H. and {{\'A}ngel}, S. and 
+  {Capaccioli}, M. and {C{\^o}t{\'e}}, P. and {Ferrarese}, L. and 
+  {Galaz}, G. and {Grebel}, E.~K. and {Hempel}, M. and {Hilker}, M. and 
+  {Lan{\c c}on}, A. and {Mieske}, S. and {Miller}, B. and {Paolillo}, M. and 
+  {Powalka}, M. and {Richtler}, T. and {Roediger}, J. and {Rong}, Y. and 
+  {S{\'a}nchez-Janssen}, R. and {Spengler}, C.},
+    title = "{The Next Generation Fornax Survey (NGFS): II. The Central Dwarf Galaxy Population}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1801.02633},
+ keywords = {Astrophysics - Astrophysics of Galaxies},
+     year = 2018,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180102633E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Longobardi15,
    author = {{Longobardi}, A. and {Arnaboldi}, M. and {Gerhard}, O. and {Hanuschik}, R.
 	},
@@ -398,8 +437,6 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
 @ARTICLE{Romanowsky01,
    author = {{Romanowsky}, A.~J. and {Kochanek}, C.~S.},
     title = "{Dynamics of Stars and Globular Clusters in M87}",
@@ -414,8 +451,6 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...553..722R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
 
 @ARTICLE{Kroupa14,
    author = {{Kroupa}, P.},
