--- a/pota.tex
+++ b/pota.tex
@@ -62,8 +62,7 @@ The Fornax cluster is the most massive galaxy structure after the Virgo cluster 
 To kinematically map the complexity of the cluster core out to at least 200 kpc using discrete kinematical tracers (e.g. GCs and UCDs) and finally connect the large scale kinematics down to the scale of the dwarf galaxies, we have started a number of spectroscopic follow-ups, which include integral field spectroscopy of dwarf galaxies with MUSE (see Mentz et al. 2016), and the multi-object spectroscopy  of GC and UCDs candidates with VIMOS/VLT.
 
 The ongoing FDS survey is a joint project based on Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) and VEGAS (P.I. E. Iodice, Capaccioli et al. 2015).
-The radial velocity catalogue of GCs in Fornax presented in this paper is complementary to archival spectroscopic GC datasets of the Fornax cluster: Schuberth et al. (2010a) (which incorporates the catalogue of Dirsch et al.
-2004), Bergond et al. (2007) and other catalogues discussed throughout the text. 
+The radial velocity catalogue of GCs in Fornax presented in this paper is complementary to archival spectroscopic GC datasets of the Fornax cluster: Schuberth et al. (2010a) (which incorporates the catalogue of Dirsch et al. 2004), Bergond et al. (2007) and other catalogues discussed throughout the text. 
 %There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an extension of the stellar kinematics out to several effective radii and overlapping with the area covered by our analysis, which we will use to compare the average properties of the velocity field of the galaxy core.
 The assumed distance is 19.95 Mpc (Tonry et al. 2010).  
 
@@ -72,19 +71,29 @@ The paper is structured as follows: Section \ref{sec:data} describes the data ac
 \section{Data}
 \label{sec:data}
 
-This Section discusses all the steps undertaken to compile the spectroscopic catalogue discussed in this paper. The workflow consists in selecting a sample of GC candidates based on photometric selection criteria (\S \ref{sec:selectionGC}) and use such a sample to design multi-object masks (\S \ref{sec:VIMOSpointings}) for follow-up observations (\S \ref{sec:observations}).
+This Section discusses all the steps undertaken to compile the spectroscopic catalogue discussed in this paper. The 
+workflow consists in selecting a sample of GC candidates based on photometric selection criteria (\S 
+\ref{sec:selectionGC}) and use such a sample to design multi-object masks (\S \ref{sec:VIMOSpointings}) for follow-up 
+observations (\S \ref{sec:observations}).
 
 \begin{figure*}
 \centering
 \includegraphics[scale=0.7]{figures/fov.png} 
-\caption{Layout of the observations. The background image is a mosaic of several VST/OmegaCAM pointings in the g-band. The central galaxy is NGC~1399. Additional Fornax galaxies are also labeled. The red boxes mark the centers of all 25 VIMOS pointings. The footprints of some VIMOS masks are shown on the bottom for illustrative purposes. Note how the VIMOS masks are intertwined to maximize spatial coverage. The region covered by all 25 VIMOS is outlined in red, whereas the regions covered by literature studies are shown in green \citep{Bergond07} and blue \citep{Schuberth}}
+\caption{Layout of the observations. The background image is a mosaic of several VST/OmegaCAM pointings in the g-
+band. The central galaxy is NGC~1399. Additional Fornax galaxies are also labeled. The red boxes mark the centers of all 
+25 VIMOS pointings. The footprints of some VIMOS masks are shown on the bottom for illustrative purposes. Note how 
+the VIMOS masks are intertwined to maximize spatial coverage. The region covered by all 25 VIMOS is outlined in red, 
+whereas the regions covered by literature studies are shown in green \citep{Bergond07} and blue \citep{Schuberth}}
 \label{fig:fov}
 \end{figure*}
 
 \subsection{Selection of globular cluster candidates}
 \label{sec:selectionGC}
-The selection of GC candidates was based on VST/OmegaCAM photometry in the $g$ and $i$ band from the FDS survey \citep{DAbrusco16,Iodice16} and preliminary VISTA/VIRCAM photometry in the $K_s$ band from the NGFS (Next Generation Fornax Survey, \citealt{Munoz14}). 
-In the combined 2-colour $giK_s$ diagram, confirmed GCs from \citet{Schuberth} are confined to a restricted colour-colour space. 
+The selection of GC candidates was based on VST/OmegaCAM photometry in the $g$ and $i$ band from the FDS survey 
+\citep{DAbrusco16,Iodice16} and preliminary VISTA/VIRCAM photometry in the $K_s$ band from the NGFS (Next 
+Generation Fornax Survey, \citealt{Munoz14}). 
+In the combined 2-colour $giK_s$ diagram, confirmed GCs from \citet{Schuberth} are confined to a restricted colour-
+colour space. 
 We defined a polygon around the radial velocity members, which serves as prime selection criterion for our GC candidates. 
 Of the 4340 unique spectroscopic targets (see Sect. 2.2) 4321 have $giK_s$ photometry, and 2643 (or $\sim$ 61 \%) of those are confined in the selection polygon. 
 We also applied a magnitude restriction of 17.0$<i<$23.0 mag to our GC candidate sample in order to avoid a severe contamination by foreground stars on the bright side and too low signal-to-noise spectra on the faint side. 
@@ -292,7 +301,7 @@ Paper & Number of duplicated objects \\
 
 We classified all Fornax objects based on their morphology: namely GCs, ultra compact dwarfs (UCDs) and background galaxies. The spatial resolution of VST/OmegaCam is insufficient to resolve the typical half-light radii of GCs with $r_h < 10 pc$ \citep{Masters, Puzia11}. Although the size of UCDs with $r_h > 20$ pc can be resolved using our imaging data \citep{Cantiello15}, measuring UCD sizes is not the focus of this paper and will be deferred to a future work.
 
-It is established that a sharp magnitude cut cannot perfectly separate UCDs from GCs. However, it has been shown \citet{Voggel16, Eigenthaler18} that the bulk of UCDs with confirmed sizes in the Fornax cluster have $M_V \le 10$ ($\approx M_i \le 11$). Therefore, we use this magnitude cut as benchmark value to separate UCDs with $i \le 20.3$ from GCs with $i > 20.3$. This selection returns 15 UCDs and 372 GCs. 
+It is established that a sharp magnitude cut cannot perfectly separate UCDs from GCs. However, it has been shown \citep{Voggel16, Eigenthaler18} that the bulk of UCDs with confirmed sizes in the Fornax cluster have $M_V \le 10$ ($\approx M_i \le 11$). Therefore, we use this magnitude cut as benchmark value to separate UCDs with $i \le 20.3$ from GCs with $i > 20.3$. This selection returns 15 UCDs and 372 GCs. 
 
 The object at $\alpha=$3:36:37.253 $\delta=$ -35:23:09.20 is the nucleus of the nucleated dwarf galaxy FCC~171, whose radial velocity was first measured in \citet{Bergond07}. This object will be treated as GCs in the following analysis.  
 %Our catalogue also includes the UCD FCSS J033854.1-353333,  with radial velocity $v_r = 1492 \kms$ \citet{Chilingarian11}. 
@@ -368,7 +377,7 @@ Finally, we report in the same Figure the central velocity dispersion values of 
 
 In conclusion of this section, we can summarise the main finding of this paper in Figure 9, by saying that the unprecedented extension of the GC kinematics, combined with the literature data, has demonstrated the kinematical signature of a population of intracluster GCs, made of both Red GCs and Blue GCs. The two populations show $v_{\rm rms}$ profiles consistent with the dynamics of a common cluster potential and also consistent with the velocity dispersion of the innermost cluster galaxies in the Fornax cluster. 
 
-Analogous signatures of intracluster stellar populations have been shown previously in the Virgo and Fornax clusters \citep[see e.g., ][]{Arnaboldi04, Longobardi15, Paolillo02, Romanowsky} but the catalog presented here will offer a unique chance to perform a fully dynamical analysis of both the bound and unbound GC populations \citep{DAbrusco16}.
+Analogous signatures of intracluster stellar populations have been shown previously in the Virgo and Fornax clusters \citep[see e.g., ][]{Arnaboldi04, Longobardi15, Paolillo02} but the catalog presented here will offer a unique chance to perform a fully dynamical analysis of both the bound and unbound GC populations \citep{DAbrusco16}.
 
 \section{Conclusions}
 \label{sec:conclusions}
