--- a/ref3.bib
+++ b/ref3.bib
@@ -14,8 +14,7 @@
 }
 
 @ARTICLE{Paolillo02,
-   author = {{Paolillo}, M. and {Fabbiano}, G. and {Peres}, G. and {Kim}, D.-W.
-  },
+   author = {{Paolillo}, M. and {Fabbiano}, G. and {Peres}, G. and {Kim}, D.-W},
     title = "{Deep ROSAT HRI Observations of the NGC 1399/NGC 1404 Region: Morphology and Structure of the X-Ray Halo}",
   journal = {\apj},
    eprint = {astro-ph/0109342},
@@ -33,12 +32,7 @@
 @ARTICLE{Eigenthaler18,
    author = {{Eigenthaler}, P. and {Puzia}, T.~H. and {Taylor}, M.~A. and 
   {Ordenes-Brice{\~n}o}, Y. and {Mu{\~n}oz}, R.~P. and {Ribbeck}, K.~X. and 
-  {Alamo-Mart{\'{\i}}nez}, K. and {Zhang}, H. and {{\'A}ngel}, S. and 
-  {Capaccioli}, M. and {C{\^o}t{\'e}}, P. and {Ferrarese}, L. and 
-  {Galaz}, G. and {Grebel}, E.~K. and {Hempel}, M. and {Hilker}, M. and 
-  {Lan{\c c}on}, A. and {Mieske}, S. and {Miller}, B. and {Paolillo}, M. and 
-  {Powalka}, M. and {Richtler}, T. and {Roediger}, J. and {Rong}, Y. and 
-  {S{\'a}nchez-Janssen}, R. and {Spengler}, C.},
+},
     title = "{The Next Generation Fornax Survey (NGFS): II. The Central Dwarf Galaxy Population}",
   journal = {ArXiv e-prints},
 archivePrefix = "arXiv",
@@ -49,8 +43,6 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180102633E},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
 
 @ARTICLE{Longobardi15,
    author = {{Longobardi}, A. and {Arnaboldi}, M. and {Gerhard}, O. and {Hanuschik}, R.
