make a test commit

--- a/pota.tex
+++ b/pota.tex
@@ -12,7 +12,7 @@
 \newcommand{\kms}{\mbox{\,km~s$^{-1}$}}
 \setlength{\tabcolsep}{0.06in}   % reduce the column spacing in the Tables
  
-\title[The Fornax Deep survey]{The Fornax Deep Survey with VST: presentation of the spectroscopic survey and compilation of the globular cluster catalogue}
+\title[The Fornax Cluster VLT Spectroscopic Survey]{The Fornax Cluster VLT Spectroscopic Survey I -- Spectroscopy and compilation of the globular cluster catalogue in the cluster core}
 
 \author[Pota et al.]{\noindent
 Vincenzo Pota et al. $^{1}$\thanks{E-mail: vincenzo.pota@gmail.com}, 
